...
                    android:layout_weight="1"
                    android:text="@string/heaters_label"
                    android:textSize="@dimen/text11" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <include
                android:id="@+id/device_table_header_layout"
                layout="@layout/device_table_header_layout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
...
